--- a/MyApplication2/MyApplication2/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication2/MyApplication2/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:background="#FFFF99"
      tools:context=".MainActivity">
 
-
+//Displays question on the screen. //
     <TextView
         android:id="@+id/lblQuestion"
         android:text="It&apos;s possible to convert PXM (PCSX) files into BK2 (Bizhawk) files. as of September 2015?  "
@@ -27,7 +27,7 @@
         android:padding="10dp"/>
 
 
-
+// Button information goes here. Shows width, height and where it is positioned onscreen. //
     <Button
         android:id="@+id/btnFalse"
         android:layout_width="150dp"
@@ -39,6 +39,7 @@
         android:textSize="24sp"
         android:padding="10dp"/>
 
+    // Displays images onscreen. //
     <ImageView
         android:id="@+id/imgPicture"
         android:layout_width="200dp"
